syntax = "proto3";

package dtm_boxes_mongodb;

option csharp_namespace = "EasyAbp.Abp.EventBus.Boxes.Dtm.MongoDB";
option go_package = "./dtm_boxes_mongodb";

message DtmStyleResponse {
  string dtm_result = 1;
}

message QueryPreparedRequest {
  string ActionApiToken = 1;
  DbConnectionLookupInfo Info = 2;
}

message DbConnectionLookupInfo {
  string DbContext = 1;
  string TenantId = 2;
  string HashedConnectionString = 3;
}

service DtmMongoDbGrpcService {
  rpc QueryPrepared(QueryPreparedRequest) returns (DtmStyleResponse) {}
}